Bug 1316236 - Treat perspective(0) as perspective(infinity). r=dholbert

MozReview-Commit-ID: H9xlpjxrzht